--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-Flask==3.0.3
-Flask-SQLAlchemy==3.1.1
-psycopg2-binary==2.9.9 # Para PostgreSQL (Heroku)
-python-dateutil==2.8.2
-gunicorn==22.0.0 # Servidor WSGI para Heroku
-Werkzeug==3.0.3
+Flask
+Flask-SQLAlchemy
+gunicorn
+psycopg2-binary
