--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,19 @@
-flask
-flask-sqlalchemy
-reportlab
-werkzeug
-gunicorn
+blinker==1.9.0
+charset-normalizer==3.4.4
+click==8.3.1
+Flask==2.2.5
+Flask-SQLAlchemy==3.0.5
+greenlet==3.2.4
+gunicorn==23.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+packaging==25.0
+pillow==12.0.0
+python-dateutil==2.9.0.post0
+qrcode==8.2
+reportlab==3.6.12
+six==1.17.0
+SQLAlchemy==2.0.44
+typing_extensions==4.15.0
+Werkzeug==2.2.3
