--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,14 +1,22 @@
 {
-  "name": "MOB ACPAMSAL",
+  "name": "MOB ACPAMSAL - Gestão Oficial",
   "short_name": "ACPAMSAL",
+  "description": "Sistema de Gestão de Motofretistas e Motoboys de Salinópolis-PA",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#1a1a1a",
   "theme_color": "#D4AF37",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "/static/logo_app.png",
       "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/static/logo_app.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
