--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,133 @@
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.0
+attrs==21.2.0
+Automat==20.2.0
+Babel==2.8.0
+bcrypt==3.2.0
 blinker==1.9.0
+CacheControl==0.14.4
+cachetools==6.2.2
+certifi==2020.6.20
+chardet==4.0.0
 charset-normalizer==3.4.4
 click==8.3.1
-Flask==2.2.5
-Flask-SQLAlchemy==3.0.5
+cloud-init==25.2
+colorama==0.4.4
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
+cryptography==3.4.8
+dbus-python==1.2.18
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
+dnspython==2.8.0
+docutils==0.22.3
+ecdsa==0.19.1
+email-validator==2.3.0
+exceptiongroup==1.3.1
+fastapi==0.124.0
+filetype==1.2.0
+firebase_admin==7.1.0
+Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
+geographiclib==2.1
+geopy==2.4.1
+google-api-core==2.28.1
+google-auth==2.43.0
+google-cloud-core==2.5.0
+google-cloud-firestore==2.21.0
+google-cloud-storage==3.6.0
+google-crc32c==1.7.1
+google-resumable-media==2.8.0
+googleapis-common-protos==1.72.0
 greenlet==3.2.4
-gunicorn==23.0.0
+grpcio==1.76.0
+grpcio-status==1.76.0
+gunicorn==22.0.0
+h11==0.16.0
+h2==4.3.0
+hpack==4.1.0
+httpcore==1.0.9
+httplib2==0.20.2
+httptools==0.7.1
+httpx==0.28.1
+hyperframe==6.1.0
+hyperlink==21.0.0
+idna==3.3
+importlib-metadata==4.6.4
+incremental==21.3.0
 itsdangerous==2.2.0
+jeepney==0.7.1
 Jinja2==3.1.6
+jsonpatch==1.32
+jsonpointer==2.0
+jsonschema==3.2.0
+keyring==23.5.0
+Kivy==2.3.1
+Kivy-Garden==0.1.5
+kivy-garden.mapview==1.0.6
+kivymd==1.2.0
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
 MarkupSafe==3.0.3
+more-itertools==8.10.0
+msgpack==1.1.2
+netifaces==0.11.0
+oauthlib==3.2.0
 packaging==25.0
+passlib==1.7.4
+pdfkit==1.0.0
 pillow==12.0.0
-python-dateutil==2.9.0.post0
-qrcode==8.2
-reportlab==3.6.12
-six==1.17.0
+playwright==1.56.0
+plyer==2.1.0
+proto-plus==1.26.1
+protobuf==6.33.1
+psycopg2-binary==2.9.9
+pyasn1==0.6.1
+pyasn1-modules==0.2.1
+pycurl==7.44.1
+pydantic==2.12.5
+pydantic_core==2.41.5
+pyee==13.0.0
+Pygments==2.19.2
+PyGObject==3.42.1
+PyHamcrest==2.0.2
+PyJWT==2.10.1
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+pyrsistent==0.18.1
+pyserial==3.5
+python-apt==2.4.0+ubuntu4.1
+python-dateutil==2.8.2
+python-decouple==3.8
+python-dotenv==1.2.1
+python-jose==3.5.0
+python-multipart==0.0.20
+pytz==2022.1
+PyYAML==5.4.1
+reportlab==4.4.7
+requests==2.25.1
+rsa==4.9.1
+SecretStorage==3.3.1
+service-identity==18.1.0
+six==1.16.0
 SQLAlchemy==2.0.44
+starlette==0.50.0
+systemd-python==234
+Twisted==22.1.0
+typing-inspection==0.4.2
 typing_extensions==4.15.0
-Werkzeug==2.2.3
+ubuntu-pro-client==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.5
+uvicorn==0.38.0
+uvloop==0.22.1
+wadllib==1.3.6
+watchfiles==1.1.1
+websockets==15.0.1
+Werkzeug==3.0.3
+zipp==1.0.0
+zope.interface==5.4.0
